# comet

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  compatibility.md
.github/workflows/: build copy.yml  build.yml  download-artifact-test.yml  lint.yml  publish-wiki.yml
ci/: package-build.sh
comet/: handlers.py  main.py
comet/api/: notification_pusher.py  token.py
comet/classes/: achievement.py  leaderboards.py  user_stats.py
comet/proto/galaxy/common/protocols/: connection_pb2.py  peer_common_pb2.py  peer_to_peer_pb2.py  peer_to_server_pb2.py
comet/proto/galaxy/protocols/: communication_service_pb2.py  overlay_for_peer_pb2.py  webbroker_service_pb2.py
comet/proto/gog/protocols/: pb_pb2.py
docs/steamdeck/: USAGE.md  comet_shortcut.sh
docs/wiki/: Configuration.md  For-Game-Developers.md  Game-Compatibility.md  Home.md  Overlay.md  Workarounds.md
docs/wiki/steamdeck/: Usage.md
dummy-service/: README.md  comet-dummy-service.bat  communication.c  install-dummy-service.bat  meson.build  permissions.c
dummy-service/meson/: x86_64-w64-mingw32.ini
src/: api.rs  config.rs  constants.rs  db.rs  heroic.rs  import_parsers.rs  lib.rs  main.rs  paths.rs  proto.rs  workarounds.rs
src/api/: gog.rs  handlers.rs  mod.rs  notification_pusher.rs
src/api/gog/: achievements.rs  components.rs  leaderboards.rs  overlay.rs  stats.rs  users.rs
src/api/handlers/: communication_service.rs  context.rs  error.rs  overlay_client.rs  overlay_peer.rs  overlay_service.rs  utils.rs  webbroker.rs
src/db/: gameplay.rs
src/import_parsers/: heroic.rs  lutris.rs  wyvern.rs
steamdeck/: USAGE.md  comet_shortcut.sh
steamdeck/dummy-service-folder-structure/: README.md
