[package]
name = "comet"
version = "0.1.0"
edition = "2021"
description = ""
authors = ["Paweł Lidwin <linguin@tutanota.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = "3.3"
clap = { version = "4.4", features = ["derive"] }
log = "0.4.19"
env_logger = "0.11.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
lazy_static = "1.4.0"
derive-getters = "0.3.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"


[profile.release]
strip = true

