[project]
name = "comet"
version = "0.1.0"
description = "Open Source implementation of GOG Galaxy's Communication Service"
authors = [
    {name = "Pawel Lidwin", email = "linguin@tutanota.com"},
]
dependencies = [
    "protobuf>=4.25.0",
    "aiohttp>=3.8.6",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "./LICENSE"}

[project.scripts]
comet = "comet.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
